--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-native-svg": "13.4.0",
     "react-native-web": "~0.18.7",
     "typescript": "^4.9.4",
-    "expo-font": "~11.1.1"
+    "expo-font": "~11.1.1",
+    "@shopify/flash-list": "1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
