--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "@types/react": "~18.0.27",
     "axios": "^1.3.5",
     "expo": "^48.0.7",
+    "expo-blur": "~12.2.2",
     "expo-constants": "~14.2.1",
+    "expo-document-picker": "^11.2.2",
+    "expo-file-system": "^15.2.2",
     "expo-font": "~11.1.1",
     "expo-linking": "~4.0.1",
     "expo-router": "^1.2.0",
@@ -23,14 +26,13 @@
     "react-native": "0.71.7",
     "react-native-calendars": "^1.1294.0",
     "react-native-gesture-handler": "~2.9.0",
-    "react-native-paper": "^5.7.0",
+    "react-native-paper": "^5.7.2",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-svg": "13.4.0",
     "react-native-web": "~0.18.7",
-    "typescript": "^4.9.4",
-    "expo-blur": "~12.2.2"
+    "typescript": "^4.9.4"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
