--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "react-native-screens": "~3.20.0",
     "react-native-svg": "13.4.0",
     "react-native-web": "~0.18.7",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "uuid": "^9.0.0",
+    "uuid-random": "^1.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
