--- a/package.json
+++ b/package.json
@@ -33,11 +33,13 @@
     "react-native-screens": "~3.20.0",
     "react-native-svg": "13.4.0",
     "react-native-web": "~0.18.7",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "uuid-random": "^1.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
-    "@babel/plugin-proposal-export-namespace-from": "^7.18.9"
+    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
+    "@faker-js/faker": "^8.0.2"
   },
   "resolutions": {
     "metro": "^0.73.7",
