--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/ngrok": "^2.5.0",
     "@react-navigation/drawer": "^6.6.2",
+    "@react-navigation/material-top-tabs": "^6.6.2",
     "@shopify/flash-list": "1.4.0",
     "@types/react": "~18.0.27",
     "axios": "^1.3.5",
@@ -23,11 +25,13 @@
     "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.7",
+    "react-native": "0.71.8",
     "react-native-calendars": "^1.1294.0",
+    "react-native-circular-progress-indicator": "^4.4.2",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-multiple-select": "^0.5.12",
     "react-native-paper": "^5.7.2",
+    "react-native-progress": "^5.0.0",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
@@ -39,7 +43,8 @@
   "devDependencies": {
     "@babel/core": "^7.19.3",
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
-    "@faker-js/faker": "^8.0.2"
+    "@faker-js/faker": "^8.0.2",
+    "@expo/ngrok": "^4.1.0"
   },
   "resolutions": {
     "metro": "^0.73.7",
