--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo-document-picker": "^11.2.2",
     "expo-file-system": "^15.2.2",
     "expo-font": "~11.1.1",
+    "expo-image-picker": "^14.1.1",
     "expo-linking": "~4.0.1",
     "expo-router": "^1.2.0",
     "expo-splash-screen": "~0.18.2",
@@ -31,6 +32,7 @@
     "react-native-gesture-handler": "~2.9.0",
     "react-native-multiple-select": "^0.5.12",
     "react-native-paper": "^5.7.2",
+    "react-native-picker-select": "^8.0.4",
     "react-native-progress": "^5.0.0",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
@@ -43,8 +45,8 @@
   "devDependencies": {
     "@babel/core": "^7.19.3",
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
-    "@faker-js/faker": "^8.0.2",
-    "@expo/ngrok": "^4.1.0"
+    "@expo/ngrok": "^4.1.0",
+    "@faker-js/faker": "^8.0.2"
   },
   "resolutions": {
     "metro": "^0.73.7",
