--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native": "0.71.8",
     "react-native-calendars": "^1.1294.0",
     "react-native-circular-progress-indicator": "^4.4.2",
+    "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-multiple-select": "^0.5.12",
     "react-native-paper": "^5.7.2",
