--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-svg": "13.4.0",
+    "react-native-tab-view": "^3.5.1",
     "react-native-web": "~0.18.7",
     "typescript": "^4.9.4",
     "uuid-random": "^1.3.2"
