--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "react-native-tab-view": "^3.5.1",
     "react-native-web": "~0.18.7",
     "typescript": "^4.9.4",
-    "uuid-random": "^1.3.2"
+    "uuid-random": "^1.3.2",
+    "expo-secure-store": "~12.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
