--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "expo-font": "~11.1.1",
     "expo-image-picker": "^14.1.1",
     "expo-linking": "~4.0.1",
+    "expo-local-authentication": "~13.3.0",
     "expo-router": "^1.2.0",
+    "expo-secure-store": "~12.1.1",
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.2",
+    "jwt-decode": "^3.1.2",
     "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -42,8 +45,7 @@
     "react-native-tab-view": "^3.5.1",
     "react-native-web": "~0.18.7",
     "typescript": "^4.9.4",
-    "uuid-random": "^1.3.2",
-    "expo-secure-store": "~12.1.1"
+    "uuid-random": "^1.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
