--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.2",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.29.4",
     "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
