--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo-secure-store": "~12.1.1",
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.2",
+    "formik": "^2.4.2",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
     "native-base": "^3.4.28",
@@ -46,7 +47,8 @@
     "react-native-tab-view": "^3.5.1",
     "react-native-web": "~0.18.7",
     "typescript": "^4.9.4",
-    "uuid-random": "^1.3.2"
+    "uuid-random": "^1.3.2",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
