--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "react-native-web": "~0.18.7",
     "typescript": "^4.9.4",
     "uuid-random": "^1.3.2",
-    "yup": "^1.2.0"
+    "yup": "^1.2.0",
+    "expo-media-library": "~15.2.3"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
