--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "typescript": "^4.9.4",
     "uuid-random": "^1.3.2",
     "yup": "^1.2.0",
-    "expo-media-library": "~15.2.3"
+    "expo-media-library": "~15.2.3",
+    "expo-sharing": "~11.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
