--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "expo-image-picker": "^14.1.1",
     "expo-linking": "~4.0.1",
     "expo-local-authentication": "~13.3.0",
+    "expo-media-library": "~15.2.3",
     "expo-router": "^1.2.0",
     "expo-secure-store": "~12.1.1",
+    "expo-sharing": "~11.2.2",
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.2",
     "formik": "^2.4.2",
@@ -34,6 +36,7 @@
     "react-native": "0.71.8",
     "react-native-calendars": "^1.1294.0",
     "react-native-circular-progress-indicator": "^4.4.2",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-multiple-select": "^0.5.12",
@@ -48,9 +51,7 @@
     "react-native-web": "~0.18.7",
     "typescript": "^4.9.4",
     "uuid-random": "^1.3.2",
-    "yup": "^1.2.0",
-    "expo-media-library": "~15.2.3",
-    "expo-sharing": "~11.2.2"
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
