removed unused and outdated files and packages, updated app name

--- a/app.json
+++ b/app.json
@@ -4,8 +4,8 @@
     "web": {
       "bundler": "metro"
     },
-    "name": "testeExpoRouter",
-    "slug": "testeExpoRouter",
+    "name": "senacApp",
+    "slug": "senacApp",
     "orientation" : "portrait",
     "splash": {
       "image" : "./assets/images/splash.png",
