--- a/package.json
+++ b/package.json
@@ -56,8 +56,7 @@
   "devDependencies": {
     "@babel/core": "^7.19.3",
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
-    "@expo/ngrok": "^4.1.0",
-    "@faker-js/faker": "^8.0.2"
+    "@expo/ngrok": "^4.1.0"
   },
   "resolutions": {
     "metro": "^0.73.7",
@@ -67,7 +66,7 @@
     "metro": "^0.73.7",
     "metro-resolver": "^0.73.7"
   },
-  "name": "testeexporouter",
+  "name": "senacapp",
   "version": "1.0.0",
   "private": true
 }
