--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-native-svg": "13.4.0",
     "react-native-tab-view": "^3.5.1",
     "react-native-web": "~0.18.7",
+    "text-encoding": "^0.7.0",
     "typescript": "^4.9.4",
     "uuid-random": "^1.3.2",
     "yup": "^1.2.0"
